WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27171
[Gtk] REGRESSION (
r45440
): fails at fast/events/frame-programmatic-focus.html
https://bugs.webkit.org/show_bug.cgi?id=27171
Summary
[Gtk] REGRESSION (r45440): fails at fast/events/frame-programmatic-focus.html
Jan Alonzo
Reported
2009-07-10 19:56:31 PDT
Changeset:
http://trac.webkit.org/changeset/45440
Test: fast/events/frame-programmatic-focus.html Test diff: <input> focused <input> blurred main frame blurred -iframe focused <input> in iframe focused <input> in frame blurred iframe blurred -main frame focused <input> focused The fix in
http://trac.webkit.org/changeset/45470
is incomplete. focus-in and focus-out events seem to only happen when there's user interaction. The fix is to implement grab_focus in the WebView as well so it will work when focus is set programmatically. Patch coming...
Attachments
implement grab-focus
(3.12 KB, patch)
2009-07-10 20:04 PDT
,
Jan Alonzo
gustavo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jan Alonzo
Comment 1
2009-07-10 20:04:39 PDT
Created
attachment 32605
[details]
implement grab-focus
Gustavo Noronha (kov)
Comment 2
2009-07-12 04:40:57 PDT
Comment on
attachment 32605
[details]
implement grab-focus
> - core(webView)->focusController()->setActive(frame); > - core(webView)->focusController()->setFocused(true); > + focusController->setActive(true); > + focusController->setFocused(true);
The only change that makes me a bit nervous is going from frame to true here. I believe there might have been a reason to not set it unconditionally? r=me, but please either revert this specific change, or add a comment here on the bug so that we have a way of tracking this down.
Jan Alonzo
Comment 3
2009-07-13 03:12:21 PDT
(In reply to
comment #2
)
> (From update of
attachment 32605
[details]
) > > - core(webView)->focusController()->setActive(frame); > > - core(webView)->focusController()->setFocused(true); > > + focusController->setActive(true); > > + focusController->setFocused(true); > > The only change that makes me a bit nervous is going from frame to true here. I > believe there might have been a reason to not set it unconditionally? r=me, but > please either revert this specific change, or add a comment here on the bug so > that we have a way of tracking this down.
Thanks. I reverted the change and landed it in
http://trac.webkit.org/changeset/45802
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug