2009-07-13  Jan Michael Alonzo  <jmalonzo@webkit.org>

<https://bugs.webkit.org/show_bug.cgi?id=27171> [Gtk]
        REGRESSION (r45440): fails at fast/events/frame-programmatic-focus.html

        Reviewed by Gustavo Noronha.

        Unskip fast/events/frame-programmatic-focus.html

        * platform/gtk/Skipped:

        focus-in and focus-out events only get triggered when there's user
        interaction, hence setFocused(bool) never gets called when
        focusEvent is triggered when running the layout tests. The
        solution seems to be to implement grab-focus too so we can call
        setFocused(bool) when a widget has focus.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_grab_focus):
        (webkit_web_view_focus_in_event):
        (webkit_web_view_class_init):

Canonical link: https://commits.webkit.org/37437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45802 268f45cc-cd09-0410-ab3c-d52691b4dbfc